[gd_scene load_steps=4 format=3 uid="uid://cqp4ed4x2svh5"]

[ext_resource type="Script" path="res://Cenas/Projéteis/snake_poison_projectile.gd" id="1_tnw73"]
[ext_resource type="Texture2D" uid="uid://dgnpjkuf0pmhq" path="res://Sprites em PNG E GIF/Projéteis/Tiro do COBRAO.png" id="2_o1wym"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4ba4a"]
radius = 5.0
height = 12.0

[node name="SnakePoisonProjectile" type="Area2D"]
collision_layer = 8
collision_mask = 2
script = ExtResource("1_tnw73")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource("2_o1wym")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("CapsuleShape2D_4ba4a")

[node name="Projectile_LifeTime" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Projectile_LifeTime" to="." method="_on_projectile_life_time_timeout"]
